--- a/blog.html
+++ b/blog.html
@@ -109,7 +109,7 @@
 
 						<div class="breadcrumb-item   text-capitalize">
 							<ul class="breadcrumb">
-								<li><a href="index-1.html">Home</a></li>
+								<li><a href="index.html">Home</a></li>
 								<li>blog</li>
 							</ul>
 						</div>
