--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="zxx">
 <head>
 	<meta charset="utf-8">
-	<title>Home 1</title>
+	<title>Wang Joi</title>
 	
 
 	<meta name="description" content="----">
@@ -51,11 +51,7 @@
 					<a href="index.html">home</a>
 				</li>
 				<li class="has-submenu">
-					<a href="#">Blog <span class="ti-angle-down"></span></a>
-					<ul class="submenu">
-						<li><a href="blog.html">Blog Grid</a></li>
-						<li><a href="blog-single.html">Single Post</a></li>
-					</ul>
+					<a href="blog.html">Blog</a>
 				</li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
@@ -105,8 +101,8 @@
 					<div class="banner-content">
 						<div class="page-head-content">
 							<div class="page-head-title text-capitalize pb40">
-								<h1>This is Puppin</h1>
-								<span class="descrip">Creative Designer</span>
+								<h1>This is Joy</h1>
+								<span class="descrip">Wang Joi</span>
 							</div>
 							<!-- //title -->
 
@@ -117,10 +113,8 @@
 								<!-- //title -->
 								<div class="page-head-social-item ul-li">
 									<ul class="page-head-social-list">
-										<li><a href="#"><span class="ti-facebook"></span></a></li>
-										<li><a href="#"><span class="ti-twitter-alt"></span></a></li>
-										<li><a href="#"><span class="ti-google"></span></a></li>
-										<li><a href="#"><span class="ti-instagram"></span></a></li>
+										<li><a href="https://twitter.com/JoyWang812"><span class="ti-twitter-alt"></span></a></li>
+										<li><a href="https://www.instagram.com/joyqiaoyiwang/"><span class="ti-instagram"></span></a></li>
 									</ul><!-- /.page-head-social-list -->
 								</div><!-- /.page-head-social-item -->
 							</div>
@@ -146,11 +140,7 @@
 					<div class="portfolio-content">
 						<div class="portfolio-tab pb55">
 							<div id="filters" class="button-group pb45">
-								<button class="tab-button active" data-filter="*">All<span>75</span></button>
-								<button class="tab-button" data-filter=".web">Branding<span>14</span></button>
-								<button class="tab-button" data-filter=".design">Identity<span>06</span></button>
-								<button class="tab-button" data-filter=".branding">Design<span>22</span></button>
-								<button class="tab-button" data-filter=".photography">Travel<span>03</span></button>
+								<button class="tab-button active" data-filter="*">All</button>
 							</div>
 							<!-- /tab-button -->
 
@@ -430,36 +420,6 @@
 
 
 
-	<!-- Start of newsletter section
-		============================================= -->
-		<section id="newsletter" class="newsletter-section">
-			<div class="page-head-overlay"></div>
-			<div class="container">
-				<div class="row">
-					<div class="newsletter-section-content">
-						<div class="newsletter-title pb75">
-							<h2 class="deep-black">Subscribe On My Newsletter</h2>
-						</div>
-
-						<div class="newsletter-form">
-							<form action="#" class="input-group">
-								<input type="email" class="form-control" placeholder="Enter Your Email">
-								<span class="input-group-addon">
-									<button type="submit"><span class="deep-black ti-arrow-right"></span></button>  
-								</span>
-							</form>
-						</div>
-					</div>
-					<!-- //.newsletter-section-content -->
-
-				</div><!--  /.row -->
-			</div><!--  /.conatainer -->
-		</section>
-	<!-- End of newsletter section
-		============================================= -->
-
-
-
 
 	<!-- Start of our service section
 		============================================= -->
@@ -625,13 +585,11 @@
 						<div class="copy-right-area text-center">
 							<div class="page-head-social-item ul-li">
 								<ul class="page-head-social-list">
-									<li><a href="#"><span class="ti-facebook"></span></a></li>
-									<li><a href="#"><span class="ti-twitter-alt"></span></a></li>
-									<li><a href="#"><span class="ti-google"></span></a></li>
-									<li><a href="#"><span class="ti-instagram"></span></a></li>
+									<li><a href="twitter.com/JoyWang812"><span class="ti-twitter-alt"></span></a></li>
+									<li><a href="instagram.com/joyqiaoyiwang"><span class="ti-instagram"></span></a></li>
 								</ul><!-- /.page-head-social-list -->
 							</div>
-							<span>© puppin 2018 - All Rights Reserved </span>
+							<span>© wangjoi 2018 - All Rights Reserved </span>
 						</div>
 						<!-- //copy-right-area -->
 					</div><!--  /.container -->
