--- a/contact.html
+++ b/contact.html
@@ -51,11 +51,7 @@
 					<a href="index.html">home</a>
 				</li>
 				<li class="has-submenu">
-					<a href="#">Blog <span class="ti-angle-down"></span></a>
-					<ul class="submenu">
-						<li><a href="blog.html">Blog Grid</a></li>
-						<li><a href="blog-single.html">Single Post</a></li>
-					</ul>
+					<a href="blog.html">Blog</a>
 				</li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
